--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="results"></div>
     <div id="speedf"></div>
     <div id="level"></div>
-    <p id="calculatedLife">Valor de vida calculado: </p>
+    <p id="calculatedLife">Life: </p>
     <div id="calculatedatk"></div>   
 
 </body>
