--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MGGStats</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/grid-styles.css">
 
 </head>
 <body>
-    <h1>Stats Simulator</h1>
+  <div class="container-mbody">
+    <div class="border">
+    <h2><strong>Stats Simulator</strong></h2>
     <form id="searchform" method="POST">
         <input type="text" name="Level" placeholder="Level"><br>
         <input type="text" name="Specimen" placeholder="Mutant Code"><br>
@@ -21,19 +25,54 @@
             <option value="silver">Silver</option>
             <option value="gold">Gold</option>
             <option value="platinum">Platinum</option>
-        </select><br><br>
+        </select><br>
         <button type="submit">Calculate</button>
         <button id="new-search-btn" style="display: none;">New Search</button>
-
     </form>
-    
-    <h2>Results:</h2>
-    <div id="results"></div>
-    <div id="speedf"></div>
-    <div id="level"></div>
-    <p id="calculatedLife">Life: </p>
-    <div id="calculatedatk"></div>   
+    </div>
+    <br>
+    <div class="border">
+      <div class="row">
+        <div class="col bg-secondary text-white">
+          <h3><strong>MGG Stats Simulator</strong></h3>
+        </div>
+      </div>
+      <div class="row align-items-center justify-content-center d-flex">
+        <div class="col-4"></div>
+        <div class="col-1">
+          <!-- bg-primary text-white align-middle d-flex align-items-center justify-content-center-->
+          <div id="mpic"></div>
+        </div>
+        <div class="col-2">
+          <div id="mnamelevel"></div>
+          <div id="speedf"></div>
+        </div>
+        <div class="col-5"></div>
+      </div>
+      <div class="row align-items-center justify-content-center d-flex">
+        <div class="col-4"></div>
+          <div class="col-1">
+          <div id="mtype"></div>
+          </div>
+        <!--<div class="col-1 d-none">A</div>  Celda oculta para mantener el diseño -->
+        <div class="col-2">
+          <p id="calculatedLife"></p>
+          <div id="calculatedatk"></div>   
+        </div>
+        <div class="col-5"></div>
+      </div>
+    </div>
+  </div>
 
+    <div id="mpic"></div>
+    <div id="results"></div>
+    <div id="level"></div>
+    <div id="speedf"></div>
+    <div id="calculatedatk"></div>
+
+  <footer>
+      &copy; 2025 - MGroup Stats Simulator. All rights reserved.
+  </footer>
 </body>
 </html>
 <script type="text/javascript" src="model/data.js"></script>
